Remove deprecated code clazz.newInstance()